# paintown

./: .dockerignore  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  LEGAL  LEGAL.md  LICENSE  Makefile  Makefile.old  README  README.md  SConstruct  TODO  cross-ps3.txt  easy-compile-docker  easy-compile-docker-devkitpro  easy-compile-docker-ps3  easy-compile-docker-psp  easy-compile-docker-steam  easy-compile-docker-windows  easy-compile-editor  easy-compile-fedora  easy-compile-mac-arm  easy-compile-mingw  easy-compile-ubuntu  easy-release-mac-arm  easy-release-ubuntu  easy-release-windows  fn-ubuntu.sh  gui-installer  install.sh  meson.build  meson.options  mingw_x86_64.txt  psp-cross.txt  release-checklist  requirements.txt  runtime-test-nix  scripting.txt  (+2 more)
misc/psp/: SND0.AT3  meson.build  mips-eabi.txt  mips32-eabi-psp.txt  sdl2-sample.cpp  sdl2-ttf.cpp
src/: .sconsign  CMakeLists.txt  SConscript  SConstruct  configuration.cpp  configuration.h  debug.cpp  debug.h  fonts.h  game.cpp  game.h  garbage.yy  globals.cpp  globals.h  init.cpp  init.h  loading.cpp  loading.h  main-menu.cpp  main.cpp  main.h  music.cpp  music.h  nameplacer.cpp  nameplacer.h  network.cpp  network.h  network_world.cpp  network_world.h  network_world_client.cpp  network_world_client.h  resource.cpp  resource.h  return_exception.h  scalebit.cpp  script.cpp  script.h  select_player.cpp  select_player.h  shutdown_exception.h  (+6 more)
src/android/: AndroidManifest.xml  build-install-run.sh  build.properties  build.xml  default.properties  install.sh  paintown.keystore
src/dumb/: CMakeLists.txt  SConscript
src/editor/: editor.cpp
src/environment/: atmosphere.cpp  atmosphere.h  fog_atmosphere.cpp  fog_atmosphere.h  night_atmosphere.cpp  night_atmosphere.h  rain_atmosphere.cpp  rain_atmosphere.h  snow_atmosphere.cpp  snow_atmosphere.h
src/exceptions/: exception.cpp  exception.h  return_exception.h
src/factory/: collector.cpp  collector.h  font_factory.cpp  font_factory.h  font_render.cpp  font_render.h  heart_factory.cpp  heart_factory.h  object_factory.cpp  object_factory.h  shadow.cpp  shadow.h
src/game/: adventure_world.cpp  adventure_world.h  console.cpp  console.h  game.cpp  game.h  input-manager.cpp  input-manager.h  input-map.h  input.cpp  input.h  mod.cpp  mod.h  select_player.cpp  select_player.h  versus_world.cpp  versus_world.h  world.cpp
src/gme/: Dual_Resampler.cpp  Gbs_Emu.h  Gym_Emu.cpp  Gym_Emu.h  Music_Emu.h  Nes_Apu.h  Nsf_Emu.h  Nsfe_Emu.h  Snes_Spc.cpp  Spc_Emu.h  Vgm_Emu.h  blargg_endian.h  gme.h  gme_types.h
src/gui/: al_keyinput.cpp  al_keyinput.h  animation.cpp  animation.h  box.cpp  box.h  container.cpp  container.h  context-box.cpp  context-box.h  coordinate.cpp  coordinate.h  fadetool.cpp  fadetool.h  keyinput.cpp  keyinput.h  keyinput_manager.cpp  keyinput_manager.h  keys.cpp  keys.h  lineedit.cpp  lineedit.h  popup-box.cpp  popup-box.h  rectarea.cpp  rectarea.h  sigslot.h  tabbed-box.cpp  tabbed-box.h  timer.cpp  timer.h  widget.cpp  widget.h
src/hawknl/: CMakeLists.txt  SConscript
src/input/: allegro-joystick.cpp  allegro-joystick.h  input-manager.cpp  input-manager.h  input-map.h  input.cpp  input.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  linux_joystick.cpp  linux_joystick.h  text-input.cpp  text-input.h
src/level/: block.cpp  block.h  blockobject.cpp  blockobject.h  cacher.cpp  cacher.h  random-scene.cpp  scene.cpp  scene.h  utils.cpp  utils.h
src/loadpng/: loadpng.c  loadpng.h  regpng.c  savepng.c
src/mdefend/: mdefend.cpp  mdefend.h
src/menu/: action_speed.cpp  action_speed.h  actionfactory.cpp  actionfactory.h  font-info.cpp  font-info.h  item_speed.cpp  item_speed.h  itemfactory.cpp  itemfactory.h  menu-exception.h  menu.cpp  menu.h  menu_action.cpp  menu_action.h  menu_animation.cpp  menu_animation.h  menu_global.cpp  menu_global.h  menu_item.cpp  menu_item.h  menu_option.cpp  menu_option.h  menutest.cpp  option_adventure.cpp  option_adventure.h  option_adventure_cpu.cpp  option_adventure_cpu.h  option_background.cpp  option_background.h  option_change_mod.cpp  option_change_mod.h  option_credits.cpp  option_credits.h  option_dummy.cpp  option_dummy.h  option_fullscreen.cpp  option_fullscreen.h  option_invincible.cpp  option_invincible.h  (+38 more)
src/missile-defend/: argument.cpp  argument.h  game.cpp  game.h
src/modules/: api.py  paintown.py  python.cpp  python.h
src/mugen/: CMakeLists.txt  SConscript  ai.h  animation.cpp  animation.h  argument.cpp  argument.h  background.cpp  background.h  behavior.cpp  behavior.h  character-select-old.cpp  character-select-old.h  character-select.cpp  character-select.h  character-state.h  character.cpp  character.h  character_select.cpp  character_select.h  characterhud.cpp  characterhud.h  command.cpp  command.h  common.h  compiler.cpp  compiler.h  config.cpp  config.h  constraint.cpp  constraint.h  definitions.h  defs.h  effect.cpp  effect.h  evaluator.cpp  evaluator.h  exception.cpp  exception.h  fadetool.cpp  (+123 more)
src/network/: README  cacher.cpp  cacher.h  chat-widget.cpp  chat-widget.h  chat.h  chat_client.cpp  chat_client.h  chat_server.cpp  chat_server.h  client.cpp  messages.cpp  messages.h  network.cpp  network.h  network_world.cpp  network_world.h  network_world_client.cpp  network_world_client.h  server.cpp  server.h
src/object/: actor.cpp  actor.h  animation.cpp  animation.h  animation_event.cpp  animation_event.h  animation_event_attack.cpp  animation_event_attack.h  animation_event_bbox.cpp  animation_event_bbox.h  animation_event_coords.cpp  animation_event_coords.h  animation_event_delay.cpp  animation_event_delay.h  animation_event_face.cpp  animation_event_face.h  animation_event_frame.cpp  animation_event_frame.h  animation_event_jump.cpp  animation_event_jump.h  animation_event_move.cpp  animation_event_move.h  animation_event_nop.cpp  animation_event_nop.h  animation_event_offset.cpp  animation_event_offset.h  animation_event_projectile.cpp  animation_event_projectile.h  animation_event_shadow.cpp  animation_event_shadow.h  animation_event_sound.cpp  animation_event_sound.h  (+66 more)
(+1489 files in other folders)
